llmdocs/0.15/_sources/sdk/generated/deepchecks_llm_client.client.DeepchecksLLMClient.rst.txt

DeepchecksLLMClient
===================



.. currentmodule:: deepchecks_llm_client.client

.. autoclass:: DeepchecksLLMClient
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   DeepchecksLLMClient.api
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   DeepchecksLLMClient.annotate
   
   
   DeepchecksLLMClient.create_app_version
   
   
   DeepchecksLLMClient.create_application
   
   
   DeepchecksLLMClient.create_custom_property
   
   
   DeepchecksLLMClient.data_iterator
   
   
   DeepchecksLLMClient.delete_custom_property
   
   
   DeepchecksLLMClient.delete_interactions
   
   
   DeepchecksLLMClient.get_application_config
   
   
   DeepchecksLLMClient.get_applications
   
   
   DeepchecksLLMClient.get_custom_properties
   
   
   DeepchecksLLMClient.get_data
   
   
   DeepchecksLLMClient.get_data_if_calculations_completed
   
   
   DeepchecksLLMClient.get_interaction_by_user_interaction_id
   
   
   DeepchecksLLMClient.get_interactions_complete_status
   
   
   DeepchecksLLMClient.get_pentest_prompts
   
   
   DeepchecksLLMClient.get_versions
   
   
   DeepchecksLLMClient.log_batch_interactions
   
   
   DeepchecksLLMClient.log_interaction
   
   
   DeepchecksLLMClient.update_application_config
   
   
   DeepchecksLLMClient.update_custom_property
   
   
   DeepchecksLLMClient.update_interaction
   






